dnl Process this file with autoconf to produce a configure script.
dnl Initialize

AC_PREREQ(2.59)
AC_INIT(TinyGDBM, 1.8.0, tinymush-bugs@lists.sourceforge.net)

../shtool echo -e "Configuring %B${PACKAGE_NAME}%b version %B${PACKAGE_VERSION}%b."
echo
echo "Copyright (c) 2005 : David Passmore, Lydia Leong, Robby Griffin,"
echo "                     Scott Dorr, Eddy Beaupre."
echo "         More info : http://tinymush.sourceforge.net"
echo

AC_CONFIG_SRCDIR([gdbmdefs.h])
AC_CONFIG_HEADER(autoconf.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AM_PROG_LIBTOOL
dnl AC_PROG_RANLIB
dnl AC_C_BIGENDIAN([])
AC_C_CONST([])
AC_CHECK_HEADERS([stdlib.h string.h sys/file.h unistd.h fcntl.h sys/types.h])
AC_CHECK_HEADERS([memory.h])
AC_CHECK_LIB(dbm, main)
AC_CHECK_LIB(ndbm, main)
AC_CHECK_FUNCS([rename ftruncate flock bcopy fsync])
AC_REPLACE_FUNCS(getopt)
AC_TYPE_OFF_T([])
AC_DIAGNOSE([obsolete],[AC_STRUCT_ST_BLKSIZE:
	your code should no longer depend upon `HAVE_ST_BLKSIZE', but
	`HAVE_STRUCT_STAT_ST_BLKSIZE'.  Remove this warning and
	the `AC_DEFINE' when you adjust the code.])
AC_CHECK_MEMBERS([struct stat.st_blksize],[AC_DEFINE(HAVE_ST_BLKSIZE, 1,
			    [Define to 1 if your `struct stat' has
			     `st_blksize'.  Deprecated, use
			     `HAVE_STRUCT_STAT_ST_BLKSIZE' instead.])])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
