dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(comsys, 3.1, tinymush-bugs@lists.sourceforge.net)
AC_CONFIG_SRCDIR([comsys.c])   

AC_COPYRIGHT([Copyright (C) 2005 David Passmore, Lydia Leong, Robby Griffin,
                   Scott Dorr, Eddy Beaupre.

                   http://tinymush.sourceforge.net])

echo
../../shtool echo -e "Configuring %B${PACKAGE_NAME}%b version %B${PACKAGE_VERSION}%b."
echo
echo "Copyright (C) 2005 David Passmore, Lydia Leong, Robby Griffin,"
echo "                   Scott Dorr, Eddy Beaupre."
echo 
echo "                   http://tinymush.sourceforge.net"
echo

AC_OUTPUT(Makefile.inc)
